bluegreen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluegreen
  labels:
    app: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen
  template:
    metadata:
      labels:
        app: bluegreen
    spec:
      containers:
      - image: quay.io/jkincl/bluegreen:latest
        name: bluegreen
