bluegreen/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bluegreen
  name: bluegreen
spec:
  to:
    kind: Service
    name: bluegreen
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
